@@ -1,2 +1,3 @@
 build/dri/lib/*_dri.so  usr/lib/dri
 build/dri/lib/gallium/r300_dri.so usr/lib/dri
+bulid/dri/lib/gallium/r600g_dri.so usr/lib/dri
